fix modal jump to top of page

--- a/dev/sass/blocks/modal.sass
+++ b/dev/sass/blocks/modal.sass
@@ -81,3 +81,7 @@
     background: url('../images/modal/next.png') no-repeat 50% 50%
   .iziModal-navigate-prev
     background: url('../images/modal/prev.png') no-repeat 50% 50%
+
+
+html.iziModal-isAttached
+  overflow: visible !important
